added openapi schema
