# app/OpenApi/Endpoints/LabelAddEndpoint.php
@@ -1,0 +1,35 @@
+<?php
+namespace App\OpenApi\Endpoints;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Post(
+    path: "/api/v1/integrations/1c/labels",
+    description: "Sync labels from 1c with site",
+    summary: "Add / Update labels",
+    security: [["bearerAuth" => []]],
+    requestBody: new OA\RequestBody(
+        ref: "#/components/requestBodies/C1LabelRequestBody"
+    ),
+    tags: ["labels"],
+    responses: [
+        new OA\Response(
+            response: 200,
+            description: "Successfully response",
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(
+                        property: "success",
+                        type: "boolean",
+                        example: true,
+                    ),
+                ]
+            )
+        ),
+        new OA\Response(
+            response: 401,
+            description: "Unauthenticated"
+        )
+    ]
+)]
+class LabelAddEndpoint {}
