# app/OpenApi/Endpoints/LabelDeleteEndpoint.php
@@ -1,0 +1,29 @@
+<?php
+namespace App\OpenApi\Endpoints;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Post(
+    path: "/api/v1/integrations/1c/labels/delete",
+    description: "Delete labels",
+    summary: "Delete labels by ids array",
+    security: [["bearerAuth" => []]],
+    requestBody: new OA\RequestBody(
+        ref: "#/components/requestBodies/C1EntityDeleteRequestBody"
+    ),
+    tags: ["labels"],
+    responses: [
+        new OA\Response(
+            response: 200,
+            description: "Successfully response",
+            content: new OA\JsonContent(
+                ref: "#/components/schemas/C1DeleteElementItem"
+            )
+        ),
+        new OA\Response(
+            response: 401,
+            description: "Unauthenticated"
+        )
+    ]
+)]
+class LabelDeleteEndpoint {}
