# app/OpenApi/RequestBodies/C1LabelRequestBody.php
@@ -1,0 +1,21 @@
+<?php
+namespace App\OpenApi\RequestBodies;
+
+use OpenApi\Attributes as OA;
+
+#[OA\RequestBody(
+    request: "C1LabelRequestBody",
+    required: true,
+    content: new OA\JsonContent(
+        required: ["items"],
+        properties: [
+            new OA\Property(
+                property: "items",
+                type: "array",
+                items: new OA\Items(ref: "#/components/schemas/C1LabelItem")
+            ),
+        ],
+        type: "object",
+    )
+)]
+class C1LabelRequestBody {}
